[gd_scene load_steps=5 format=3 uid="uid://bhjj65esfdxo5"]

[ext_resource type="Script" uid="uid://dqe2ff7ogrrny" path="res://scripts/directions.gd" id="1_nt7q6"]
[ext_resource type="Texture2D" uid="uid://ciyujnlbun7r3" path="res://assets/placeholder/arror2.png" id="2_aac20"]
[ext_resource type="Texture2D" uid="uid://cayv1e7fq4qft" path="res://assets/placeholder/arror.png" id="3_aac20"]
[ext_resource type="Texture2D" uid="uid://doaafokwr01y7" path="res://assets/placeholder/cursor.png" id="4_g5kmx"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")
CursorL = ExtResource("2_aac20")
CursorR = ExtResource("3_aac20")
CursorDef = ExtResource("4_g5kmx")

[node name="left" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -476.0
offset_right = 192.0
offset_bottom = 484.0
grow_vertical = 2
mouse_filter = 1
text = "LEFT"

[node name="right" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -476.0
offset_bottom = 484.0
grow_horizontal = 0
grow_vertical = 2
text = "RIGHT"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -648.0
offset_top = -273.0
offset_right = -494.0
offset_bottom = -199.0
grow_horizontal = 2
grow_vertical = 2
text = "progress +1"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -280.0
offset_right = 117.0
offset_bottom = -187.0
grow_horizontal = 2
grow_vertical = 2
text = "weird toggle"

[connection signal="mouse_entered" from="left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="left" to="." method="_on_left_mouse_exited"]
[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="mouse_entered" from="right" to="." method="_on_right_mouse_entered"]
[connection signal="mouse_exited" from="right" to="." method="_on_right_mouse_exited"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
